<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_jobs"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.servicesoft.app.mobile.servicesoft.job.JobListActivity">

    <TextView
        android:text="@string/newJob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/textView"
        android:textAlignment="center"
        android:fontFamily="serif" />

    <Button
        android:text="@string/addJobButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addJobButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
/>

    <TextView
        android:text="@string/jobDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginTop="15dp"
        android:id="@+id/textView2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/jobDescriptionBox"
        android:ems="10"
        android:id="@+id/editText"
        android:fontFamily="serif"
        android:textAlignment="center"
        android:layout_alignTop="@+id/textView2"
        android:layout_toRightOf="@id/textView2"
        android:layout_toEndOf="@+id/textView2" />

    <TextView
        android:text="@string/jobDateAndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/datePicker"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
