<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_customer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.servicesoft.app.mobile.servicesoft.customer.AddCustomerActivity">

    <TextView
        android:text="@string/customerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/customerNameView"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="37dp"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        android:fontFamily="serif" />

    <TextView
        android:text="@string/enterCustomerPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:id="@+id/enterCustomerPhoneNumber"
        android:textAlignment="center"
        android:fontFamily="serif"
        android:layout_below="@+id/editCustomerText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_marginTop="21dp"
        android:id="@+id/enterCustomerPhoneNumberNumber"
        android:hint="Enter Phone Number Here"
        android:textAlignment="center"
        android:fontFamily="serif"
        android:layout_below="@+id/enterCustomerPhoneNumber"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="21dp"
        android:id="@+id/editCustomerText"
        android:hint="@string/enterPersonName"
        android:textAlignment="center"
        android:fontFamily="serif"
        android:layout_below="@+id/customerNameView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/customerAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enterCustomerPhoneNumberNumber"
        android:layout_marginTop="18dp"
        android:id="@+id/customerAddress"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        android:fontFamily="serif" />

    <TextView
        android:text="@string/streetName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/customerAddress"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:id="@+id/streetName"
        android:fontFamily="serif" />


    <TextView
        android:text="@string/cityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/cityName"
        android:layout_below="@+id/streetName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@id/cityName"
        android:layout_alignEnd="@+id/streetName"
        android:fontFamily="serif" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:hint="street name and address here"
        android:ems="10"
        android:layout_alignTop="@+id/streetName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/enterCityName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:hint=" Province Name here"

        android:ems="10"
        android:layout_alignTop="@+id/cityName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/editProvinceName" />

</RelativeLayout>
